<resources>
    <string name="app_name">BookZone</string>
    <string name="bookzone">BookZone</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_dashboard">Hello Dashboard</string>
    <string name="hello_about_us">Hello About US</string>
    <string name="hello_favorites">Hello Favorites</string>
    <string name="hello_profile">Hello Profile</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="rs_299">Rs. 299</string>
    <string name="check_internet">Check Internet</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="book_content">Book Content</string>
    <string name="about_the_book">About the book</string>
    <string name="_2_3">2.3</string>
</resources>